# promo

./: .gitignore  Dockerfile  alembic.ini  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  req.txt
migrations/: env.py
migrations/versions/: 0a8e159806ff_create_promo_table.py  4b9fdad2ced4_create_promocode_table.py
outputter/: handlers.py  models.py  schemas.py  service.py
tests/: conftest.py  test_handlers.py  test_service.py
